--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,18 @@ spring:
     port: 5672
     username: root
     password: 123456
+    publisher-confirms: true
+    publisher-returns: true
+    template:
+      mandatory: true
+  datasource:
+    name: eden
+    type: com.alibaba.druid.pool.DruidDataSource
+    druid:
+      driver-class-name: com.mysql.jdbc.Driver
+      url: jdbc:mysql://106.14.187.183:3306/eden
+      username: root
+      password: Slc13092271475@
 
 dubbo:
   application:
