--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
             <version>1.3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.eden.order</groupId>
+            <artifactId>order-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
